# rust-client-watcher

./: Cargo.toml  README.md
src/: custom_resources.rs  main.rs
