[package]
name = "kube-client-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
hyper = "0.14"
futures = "0.3.29"
k8s-openapi-derive = "0.20.0"
k8s-openapi = { version = "0.20.0", features = ["schemars", "v1_26"] }
kube = { version = "0.87.0", features = ["client", "runtime"] }
schemars = { version = "0.8", features = ["impl_json_schema"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
